# crewai

./: README.md  pyproject.toml  test.py
src/test_project_2/: crew.py  main.py
src/test_project_2/config/: agents.yaml  tasks.yaml
