[project]
name = "test_project_2"
version = "0.1.0"
description = "test-project-2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "streamlit>=1.45.0",
]

[project.scripts]
test_project_2 = "test_project_2.main:run"
run_crew = "test_project_2.main:run"
train = "test_project_2.main:train"
replay = "test_project_2.main:replay"
test = "test_project_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
